@@ -174,6 +174,7 @@ fully support the editing toolbar, but was found to be too confusing.
 * Edit box now remembers scrollbar position on preview
 * (bug 3798) DoubleRedirects no longer has hard coded arrows
 * (bug 2324) image for redirects should be without text and oriented according to content language
+* (bug 3803) Fix links on Special:Wantedcategories with miser mode off
 
 
 === Caveats ===
